# Image-Editing-App

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  makeAndRun.sh
